# midi-visualizer

./: .gitignore  CMakeLists.txt  LICENSE
src/midi/: app.cpp
src/midi/io/: endianness.cpp  endianness.h  read.h  vli.cpp  vli.h
src/midi/midi/: midi.cpp  midi.h  primitives.cpp  primitives.h
src/midi/rendering/: renderer.cpp  renderer.h
